<resources>
    <string name="app_name">Project</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">EMAIL</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_out">Log Out</string>
    <string name="clear">CLEAR</string>
    <string name="slash">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mul">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>

</resources>