<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:background="@drawable/layout_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:layout_marginBottom="20dp"
                    android:textSize="40sp"
                    android:textAlignment="center"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:id="@+id/user"
                    android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:hint="@string/username"
                    android:fontFamily="sans-serif-black"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:textColorHint="#606060"
                    android:inputType="text"
                    tools:ignore="TextFields" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/pass"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:fontFamily="sans-serif-black"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:inputType="textPassword"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:id="@+id/remember"
                    android:fontFamily="sans-serif-black"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="25dp"
                    android:id="@+id/sign_In"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:background="@drawable/button_background"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="100dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/don_t_have_an_account"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@android:color/black" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/sign_up"
                    android:background="@drawable/button_background"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>